# sapphire-agent

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TESTING.md  cliff.toml  config.example.toml  deny.toml  install.ps1  install.sh  release-plz.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release-cli.yml  release-desktop.yml  release-plz.yml  release.yml
crates/sapphire-agent-api/: Cargo.toml
crates/sapphire-agent-api/src/: lib.rs  voice.rs
crates/sapphire-agent-rpc/: CHANGELOG.md  Cargo.toml
crates/sapphire-agent-rpc/src/: chat.rs  lib.rs  voice.rs
crates/sapphire-call/: Cargo.toml  config.example.toml
crates/sapphire-call-cli/: CHANGELOG.md  Cargo.toml  config.example.toml
crates/sapphire-call-cli/src/: main.rs
crates/sapphire-call-cli/src/voice/: mod.rs  oww.rs
crates/sapphire-call-cli/tests/: config_example.rs
crates/sapphire-call-core/: CHANGELOG.md  Cargo.toml
crates/sapphire-call-core/src/: config.rs  device_id.rs  lib.rs
crates/sapphire-call-desktop/: CHANGELOG.md  Cargo.toml
crates/sapphire-call-desktop/assets/icons/: LICENSE-LUCIDE.txt
crates/sapphire-call-desktop/src/: audio.rs  bridge.rs  config.rs  main.rs  state.rs
crates/sapphire-call-desktop/src/ui/: chat.rs  mod.rs  settings.rs
crates/sapphire-call/src/: config.rs  device_id.rs  main.rs  voice.rs
crates/sapphire-call/src/voice/: download.rs  mod.rs  oww.rs  wake.rs
docs/: mcp-integration.md
src/: agent.rs  call.rs  config.rs  context_compression.rs  daily_log.rs  frontmatter.rs  heartbeat.rs  heartbeat_config.rs  image_cache.rs  main.rs  memory_compaction.rs  periodic_log.rs  serve.rs  session.rs  timer.rs  workspace.rs
src/channel/: discord.rs  discord_voice.rs  matrix.rs  mod.rs
src/mcp_client/: mod.rs  transport.rs
src/provider/: anthropic.rs  fallback.rs  mod.rs  openai_compatible.rs  registry.rs
src/serve/: a2a.rs  mcp.rs  mod.rs
src/tools/: builtin_tools.rs  mod.rs  timer_tools.rs  workspace_tools.rs
src/voice/: mod.rs  pipeline.rs  stt.rs  tts.rs  vad.rs
src/voice/providers/: gradio_tts.rs  mock.rs  mod.rs  openai_tts.rs  sherpa_download.rs  sherpa_stt.rs  sherpa_tts.rs  style_bert_vits2_tts.rs  wav_stream.rs  whisper_rs.rs
test-configs/: voice-irodori.toml  voice-mock.toml
