[workspace]
members = [".", "crates/sapphire-agent-api", "crates/sapphire-call"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
serde_json = "1.0"
tokio = { version = "1.52", default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
] }

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/sapphire-agent"

[package]
name = "sapphire-agent"
version.workspace = true
edition.workspace = true
description = "A personal AI assistant agent with Matrix/Discord channels, Anthropic backend, and a sapphire-workspace memory layer"
license.workspace = true
repository.workspace = true
homepage = "https://github.com/fluo10/sapphire-agent"
keywords = ["ai", "agent", "anthropic", "matrix", "discord"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["/.github", "/.gitignore", "/.claude", "/.vscode", "/rust-toolchain.toml", "/config.example.toml"]

[[bin]]
name = "sapphire-agent"
path = "src/main.rs"

[features]
default = ["lancedb-store", "fastembed-embed", "git-sync"]
lancedb-store = ["sapphire-workspace/lancedb-store"]
fastembed-embed = ["sapphire-workspace/fastembed-embed"]
git-sync = ["sapphire-workspace/git-sync"]
# Compile in the local sherpa-onnx STT + TTS providers. Off by default
# because sherpa-onnx-sys pulls in a large C++ build (sherpa-onnx +
# ONNX runtime, ~5–10 minutes on a cold cache). Users who only run the
# Gradio TTS path or who don't need voice at all should skip it.
voice-sherpa = ["dep:sherpa-onnx", "dep:tar", "dep:bzip2"]

[dependencies]
# Async runtime
tokio = { workspace = true, features = [
    "time",
    "sync",
    "fs",
    "signal",
    "net",
] }

# HTTP client (Anthropic API + tool HTTP calls)
reqwest = { workspace = true, features = ["blocking"] }

# Matrix client + E2EE
matrix-sdk = { version = "0.16", default-features = false, features = [
    "e2e-encryption",
    "rustls-tls",
    "sqlite",
    "bundled-sqlite",
    "markdown",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true

# Config (TOML)
toml = "1.0"

# YAML (heartbeat task frontmatter)
serde_yaml = "0.9"

# Cron expression parsing (heartbeat schedules)
cron = "0.16"

# Error handling
anyhow.workspace = true

# Async traits
async-trait = "0.1"

# Futures utilities (SSE streaming)
futures-util.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber.workspace = true

# CLI
clap.workspace = true

# XDG directories for config/data paths
directories = "6.0"

# System hostname lookup for the sapphire-workspace DeviceDefaults init
hostname = "0.4"

# Shell path expansion (~/)
shellexpand = "3.1"

# Date/time with serde support (human-readable ISO 8601 timestamps)
chrono = { version = "0.4", features = ["serde"] }

# Time-ordered unique IDs for session files
uuid = { version = "1", features = ["v7"] }

# Workspace: file indexing, FTS, vector search, git sync
# lancedb-store is gated behind the "lancedb-store" feature (default on)
sapphire-workspace = { version = "0.10.1", default-features = false }

# Human-readable session IDs for API sessions
grain-id = { version = "0.14", features = ["serde"] }

# Client library (shared with sapphire-call)
sapphire-agent-api = { path = "crates/sapphire-agent-api", version = "0.5.0" }

# HTTP server (serve command)
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }

# Stream utilities (axum SSE)
tokio-stream = { version = "0.1", features = ["sync"] }

# CORS middleware
tower-http = { version = "0.6", default-features = false, features = ["cors"] }

# Base64 encoding (image attachments → Anthropic API)
base64 = "0.22"

# SHA-256 for content-addressing voice/config payloads (so satellites
# can cache the openWakeWord model by hash instead of re-downloading).
sha2 = "0.10"

# Discord bot (gateway + HTTP, rustls TLS)
# Requires MESSAGE_CONTENT privileged intent enabled in Discord Developer Portal
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }

# Local STT + TTS via the official sherpa-onnx Rust crate (k2-fsa).
# Statically links sherpa-onnx + ONNX runtime — no system install needed.
# Optional, gated behind the `voice-sherpa` feature; the build is slow
# (sherpa-onnx-sys compiles C++ via CMake).
sherpa-onnx = { version = "1.13", optional = true }

# Model bundle extraction. sherpa-onnx ships pre-trained models as
# tar.bz2 archives on GitHub releases; both crates are gated alongside
# sherpa-onnx itself.
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.5", optional = true }

# WAV decoding for TTS providers that return audio files (e.g. Gradio Web UI).
hound = "3.5"

# A2A protocol v1 types (Message, Task, Part, AgentCard, JSON-RPC).
# Official Linux Foundation SDK; we use the types crate only and roll our
# own JSON-RPC dispatch on the existing axum app in src/serve.
a2a = { package = "a2a-lf", version = "0.3" }

[dev-dependencies]
tempfile = "3"
