[package]
name = "sapphire-agent-api"
version.workspace = true
edition.workspace = true
description = "Client library and shared types for sapphire-agent"
license.workspace = true
repository.workspace = true

[dependencies]
# HTTP client
reqwest.workspace = true

# Serialization
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Futures utilities (SSE streaming)
futures-util.workspace = true

# Readline for the REPL (CJK-safe input, history, cursor movement)
reedline = "0.47"
