[package]
name = "sapphire-agent-api"
version.workspace = true
edition.workspace = true
description = "Client library and shared types for sapphire-agent"
license.workspace = true
repository.workspace = true

[dependencies]
# HTTP client
reqwest.workspace = true

# Serialization
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Futures utilities (SSE streaming)
futures-util.workspace = true

# Readline for the REPL (CJK-safe input, history, cursor movement)
reedline = "0.47"

# Async runtime — only the `sync` feature for mpsc::Sender used by the
# voice event stream. The agent binary brings in more features; this
# crate keeps it minimal.
tokio = { workspace = true, features = ["sync"] }

# Base64 encoding for PCM frames in voice/pipeline_run params.
base64 = "0.22"
