[package]
name = "sapphire-call-cli"
version = "0.6.1"
edition.workspace = true
description = "Standalone CLI / voice-satellite client for sapphire-agent"
license.workspace = true
repository.workspace = true

[[bin]]
name = "sapphire-call"
path = "src/main.rs"

[dependencies]
sapphire-agent-rpc = { path = "../sapphire-agent-rpc", version = "0.6.1" }
sapphire-call-core = { path = "../sapphire-call-core", version = "0.6.1" }

# Async runtime — voice subcommand needs sync, time, and rt features.
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros", "signal"] }

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing-subscriber.workspace = true

# Audio I/O for the voice subcommand: mic capture + speaker playback.
cpal = "0.17"

# HTTP client. The blocking variant is used by the voice satellite for
# one-shot model downloads during startup (before the tokio runtime is
# busy with audio I/O).
reqwest = { workspace = true, features = ["blocking"] }

# Local Silero VAD + (later) keyword spotting via the official sherpa-onnx
# Rust crate. Statically links the C++ runtime; first build is slow.
sherpa-onnx = "1.13"

# Model bundle extraction (sherpa-onnx ships tar.bz2 model archives on
# GitHub releases).
tar = "0.4"
bzip2 = "0.6"

# XDG cache dir resolution for downloaded models.
directories = "6.0"

# Path expansion for ~/...
shellexpand = "3.1"

# Logging — surface model downloads to the operator.
tracing = "0.1"

# UUID v7 for the per-installation device id.
uuid = { version = "1", features = ["v7"] }

# openWakeWord runtime: ONNX runtime + ndarray. ort downloads
# precompiled ONNX runtime binaries from pykeio's hosted mirror; this
# is independent of sherpa-onnx-sys's statically-linked runtime so
# the two coexist.
ort = "2.0.0-rc.12"
ndarray = "0.17"

# SHA-256 for content-addressing the openWakeWord ONNX cache.
sha2 = "0.11"

[dev-dependencies]
tempfile = "3"
