[package]
name = "sapphire-call-desktop"
version = "0.1.0"
edition.workspace = true
description = "Desktop GUI client for sapphire-agent (bevy + egui)"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "sapphire-call-desktop"
path = "src/main.rs"

[dependencies]
sapphire-agent-rpc = { path = "../sapphire-agent-rpc", version = "0.7.0" }
sapphire-call-core = { path = "../sapphire-call-core", version = "0.7.0" }

# Game engine — needed up front for the eventual 3D character work
# (desktop-mate-style avatar). For the chat-only first cut we use only
# the windowing + render essentials, but pinning bevy now keeps us from
# rewriting the runtime later. Default features are deliberately
# avoided: bevy ships ~70 of them, including audio and asset loaders we
# don't need yet, and pulling them all in slows the cold build by minutes.
bevy = { version = "0.18", default-features = false, features = [
    "bevy_winit",
    "bevy_window",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_text",
    "bevy_ui",
    "bevy_sprite",
    # bevy_egui 0.39 enables its `picking` feature by default and emits
    # a warning at startup if bevy's matching `bevy_picking` isn't on;
    # without it, the picking plugin isn't installed and bevy_egui's
    # input + render path doesn't wire up correctly (window paints
    # black, no UI visible).
    "bevy_picking",
    "default_font",
    "x11",
    "wayland",
    "multi_threaded",
] }

# Immediate-mode UI inside the bevy app — drives every panel until /
# unless we eventually replace specific panels with native bevy_ui.
bevy_egui = "0.39"

# egui_extras supplies the image loader plumbing we use to render the
# bundled Lucide SVG icons (settings / mic / send / stop). The `svg`
# feature pulls in resvg, which turns each SVG into a texture at the
# requested DPI on first use. Pinned to 0.33 so it matches the egui
# 0.33.x re-export from bevy_egui 0.39.
egui_extras = { version = "0.33", features = ["svg"] }

# Async RPC needs its own runtime because bevy's scheduler is sync.
# Multi-threaded so streaming chat + audio playback don't block the
# UI tokio task on the same thread.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }

# Shared HTTP client. Blocking variant is used by the one-shot
# Silero VAD model download on first mic press (off the tokio runtime
# via spawn_blocking).
reqwest = { workspace = true, features = ["blocking"] }

# Error handling
anyhow.workspace = true

# Logging
tracing = "0.1"
tracing-subscriber.workspace = true

# Desktop-specific config (extends the shared core ServerConfig with
# TTS opt-in + window-state knobs).
serde = { version = "1", features = ["derive"] }
toml = "1"
directories = "6"

# Audio I/O: TTS playback (server-streamed s16le mono 16 kHz PCM)
# and mic capture for the voice button. Same crate the call CLI
# satellite uses, so the cpal sample-format handling matches.
cpal = "0.17"

# Silero VAD for mic auto-stop on silence — matches the CLI's
# detection logic instead of rolling a separate energy-based path.
# sherpa-onnx statically links its C++ + ONNX runtime, so first
# build of this crate is slow.
sherpa-onnx = "1.13"
