[package]
name = "sapphire-call"
version.workspace = true
edition.workspace = true
description = "Standalone CLI client for sapphire-agent"
license.workspace = true
repository.workspace = true

[[bin]]
name = "sapphire-call"
path = "src/main.rs"

[dependencies]
sapphire-agent-api = { path = "../sapphire-agent-api", version = "0.5.0" }

# Async runtime
tokio.workspace = true

# CLI
clap.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing-subscriber.workspace = true
